force-app/main/default/objects/DocGen_Error_Log__c/DocGen_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Stores non-sensitive Portwood exception details for administrator troubleshooting.</description>
    <label>Portwood Error Log</label>
    <nameField>
        <displayFormat>ERR-{000000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portwood Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>