force-app/main/default/objects/DocGen_Error_Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Portwood class, endpoint, or subsystem where the error was captured.</description>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>