force-app/main/default/objects/DocGen_Error_Log__c/fields/Flow_Interview_Guid__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_Guid__c</fullName>
    <description>Flow interview GUID supplied by a Flow caller, when available.</description>
    <label>Flow Interview GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>