force-app/main/default/objects/DocGen_Error_Log__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <description>Portwood Job Id involved in the failed operation, when known.</description>
    <label>Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>