force-app/main/default/objects/DocGen_Error_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Specific user-facing operation, such as template loading or bulk Flow launch.</description>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>