force-app/main/default/objects/DocGen_Error_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Source Salesforce record Id involved in the failed operation, when known.</description>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>