force-app/main/default/objects/DocGen_Error_Log__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <description>Portwood Template Id involved in the failed operation, when known.</description>
    <label>Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>