force-app/main/default/objects/DocGen_Error_Log__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Running user Id at the time the error was captured.</description>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>