force-app/main/default/objects/DocGen_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Context__c</columns>
    <columns>Operation__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>User_Id__c</columns>
    <columns>Template_Id__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Job_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>